force-app/main/default/objects/Pet__c/fields/Ado_o__c.field-meta.xml
<CustomField>
    <fullName>Ado_o__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adoção</label>
    <type>Checkbox</type>
</CustomField>