force-app/main/default/objects/Pet__c/fields/Data_da_pr_xima_vacina_o__c.field-meta.xml
<CustomField>
    <fullName>Data_da_pr_xima_vacina_o__c</fullName>
    <label>Data da próxima vacinação</label>
    <type>Date</type>
</CustomField>