force-app/main/default/objects/Pet__c/fields/Especie__c.field-meta.xml
<CustomField>
    <fullName>Especie__c</fullName>
    <label>Especie</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cachorro</fullName>
            </value>
            <value>
                <fullName>Gato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>