force-app/main/default/objects/Pet__c/fields/Ra_a__c.field-meta.xml
<CustomField>
    <fullName>Ra_a__c</fullName>
    <label>Raça</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Especie__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vira-lata</fullName>
            </value>
            <value>
                <fullName>Poodle</fullName>
            </value>
            <value>
                <fullName>Siamês</fullName>
            </value>
            <value>
                <fullName>Persa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>