force-app/main/default/objects/Pet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Especie__c</columns>
    <columns>Ra_a__c</columns>
    <columns>Data_da_ltima_vacina_o__c</columns>
    <columns>Data_da_pr_xima_vacina_o__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>